--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,60 @@
+body {
+    background-color: black;
+    color: white;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding: 50px;
+    font-weight: bold; 
+}
 
-/* 
+.timer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.display {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
 
-*/
+.digit-box {
+    width: 40px;
+    height: 60px;
+    background-color: #333;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    margin: 0 5px;
+    border-radius: 5px;
+}
+
+.controls button {
+    color: #fff;
+    margin: 5px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 15%;
+    background-color: #9468fc;
+}
+
+.inputs {
+    margin-top: 20px;
+}
+
+.alert-input, .countdown-input {
+    margin-bottom: 10px;
+}
+
+.alert-input label, .countdown-input label {
+    margin-right: 10px;
+}
+
+.alert-input input, .countdown-input input {
+    padding: 5px;
+    font-size: 1rem;
+}
